// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Installations should render component when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.section
        classname=""
      >
        <mock-styled.h1
          classname=""
        >
          Installations
        </mock-styled.h1>
        <form>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 2.5rem;
"
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-bottom: 0.75rem;
"
                >
                  <mock-styled.input
                    classname=""
                    id="test-static-id"
                    placeholder="Search"
                  />
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                  <mock-styled.label
                    htmlfor="test-static-id"
                  >
                    Search Apps
                  </mock-styled.label>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.input
                    id="app-ids-select"
                    name="appIds"
                  />
                  <mock-styled.div
                    classname="mock-css.
  margin-bottom: 0.75rem;
"
                  >
                    <mock-styled.span
                      classname="mock-css.
  margin-left: 0.375rem;
 mock-css.
  font-size: 2.5rem;
"
                    >
                      <svg />
                    </mock-styled.span>
                    <p>
                      No apps selected
                    </p>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label
                classname="mock-css.
  display: flex;
 mock-css.
  margin-bottom: 0.5rem;
"
                htmlfor="developer-search-box"
              >
                Company
              </mock-styled.label>
              <mock-styled.div>
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  data-testid="search-input"
                  name="companyName"
                  placeholder="Search developer organisations"
                  value=""
                />
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label
                classname="mock-css.
  display: flex;
 mock-css.
  margin-bottom: 0.5rem;
"
                htmlfor="client-search-box"
              >
                Client
              </mock-styled.label>
              <mock-styled.div>
                <input
                  id="client-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  data-testid="search-input"
                  name="clientId"
                  placeholder="Search customers"
                  value=""
                />
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="installedDateFrom"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Installed Date From
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="installedDateTo"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Installed Date To
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.label>
                  Is Charged Consumption
                </mock-styled.label>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.input
                    id="option-consumption-all"
                    name="isChargedConsumption"
                    type="radio"
                    value=""
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="option-consumption-all"
                  >
                    <mock-styled.span>
                      All
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="option-consumption-true"
                    name="isChargedConsumption"
                    type="radio"
                    value="true"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="option-consumption-true"
                  >
                    <mock-styled.span>
                      Charged
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="option-consumption-false"
                    name="isChargedConsumption"
                    type="radio"
                    value="false"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="option-consumption-false"
                  >
                    <mock-styled.span>
                      Free
                    </mock-styled.span>
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </form>
        <div
          class="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.button
                classname="mock-css."
                type="button"
              >
                <mock-styled.div />
                Download CSV
              </mock-styled.button>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.section>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.section
      classname=""
    >
      <mock-styled.h1
        classname=""
      >
        Installations
      </mock-styled.h1>
      <form>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-bottom: 0.75rem;
"
              >
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  placeholder="Search"
                />
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Search Apps
                </mock-styled.label>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="app-ids-select"
                  name="appIds"
                />
                <mock-styled.div
                  classname="mock-css.
  margin-bottom: 0.75rem;
"
                >
                  <mock-styled.span
                    classname="mock-css.
  margin-left: 0.375rem;
 mock-css.
  font-size: 2.5rem;
"
                  >
                    <svg />
                  </mock-styled.span>
                  <p>
                    No apps selected
                  </p>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label
              classname="mock-css.
  display: flex;
 mock-css.
  margin-bottom: 0.5rem;
"
              htmlfor="developer-search-box"
            >
              Company
            </mock-styled.label>
            <mock-styled.div>
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div
                data-testid="search-input"
                name="companyName"
                placeholder="Search developer organisations"
                value=""
              />
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label
              classname="mock-css.
  display: flex;
 mock-css.
  margin-bottom: 0.5rem;
"
              htmlfor="client-search-box"
            >
              Client
            </mock-styled.label>
            <mock-styled.div>
              <input
                id="client-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div
                data-testid="search-input"
                name="clientId"
                placeholder="Search customers"
                value=""
              />
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="installedDateFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Installed Date From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="installedDateTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Installed Date To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Is Charged Consumption
              </mock-styled.label>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.input
                  id="option-consumption-all"
                  name="isChargedConsumption"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-consumption-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-consumption-true"
                  name="isChargedConsumption"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-consumption-true"
                >
                  <mock-styled.span>
                    Charged
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-consumption-false"
                  name="isChargedConsumption"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-consumption-false"
                >
                  <mock-styled.span>
                    Free
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <div
        class="mock-css.
  margin-bottom: 2.5rem;
"
      >
        <mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.button
              classname="mock-css."
              type="button"
            >
              <mock-styled.div />
              Download CSV
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Installations should render component with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.section
        classname=""
      >
        <mock-styled.h1
          classname=""
        >
          Installations
        </mock-styled.h1>
        <form>
          <mock-styled.div
            classname="mock-css.
  margin-bottom: 2.5rem;
"
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css.
  margin-bottom: 0.75rem;
"
                >
                  <mock-styled.input
                    classname=""
                    id="test-static-id"
                    placeholder="Search"
                  />
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                  <mock-styled.label
                    htmlfor="test-static-id"
                  >
                    Search Apps
                  </mock-styled.label>
                </mock-styled.div>
                <mock-styled.div>
                  <mock-styled.input
                    id="app-ids-select"
                    name="appIds"
                  />
                  <mock-styled.div
                    classname="mock-css.
  margin-bottom: 0.75rem;
"
                  >
                    <mock-styled.span
                      classname="mock-css.
  margin-left: 0.375rem;
 mock-css.
  font-size: 2.5rem;
"
                    >
                      <svg />
                    </mock-styled.span>
                    <p>
                      No apps selected
                    </p>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label
                classname="mock-css.
  display: flex;
 mock-css.
  margin-bottom: 0.5rem;
"
                htmlfor="developer-search-box"
              >
                Company
              </mock-styled.label>
              <mock-styled.div>
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  data-testid="search-input"
                  name="companyName"
                  placeholder="Search developer organisations"
                  value=""
                />
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.label
                classname="mock-css.
  display: flex;
 mock-css.
  margin-bottom: 0.5rem;
"
                htmlfor="client-search-box"
              >
                Client
              </mock-styled.label>
              <mock-styled.div>
                <input
                  id="client-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <mock-styled.div>
                  <mock-styled.span
                    classname=""
                  >
                    <svg />
                  </mock-styled.span>
                </mock-styled.div>
                <mock-styled.div
                  data-testid="search-input"
                  name="clientId"
                  placeholder="Search customers"
                  value=""
                />
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="installedDateFrom"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Installed Date From
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="installedDateTo"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Installed Date To
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.label>
                  Is Charged Consumption
                </mock-styled.label>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.input
                    id="option-consumption-all"
                    name="isChargedConsumption"
                    type="radio"
                    value=""
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="option-consumption-all"
                  >
                    <mock-styled.span>
                      All
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="option-consumption-true"
                    name="isChargedConsumption"
                    type="radio"
                    value="true"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="option-consumption-true"
                  >
                    <mock-styled.span>
                      Charged
                    </mock-styled.span>
                  </mock-styled.label>
                  <mock-styled.input
                    id="option-consumption-false"
                    name="isChargedConsumption"
                    type="radio"
                    value="false"
                  />
                  <mock-styled.label
                    classname="mock-css."
                    htmlfor="option-consumption-false"
                  >
                    <mock-styled.span>
                      Free
                    </mock-styled.span>
                  </mock-styled.label>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </form>
        <div
          class="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.button
                classname="mock-css."
                type="button"
              >
                <mock-styled.div />
                Download CSV
              </mock-styled.button>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 2.5rem;
"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="8"
        >
          <mock-styled.div>
            <mock-styled.div>
              Customer Name
            </mock-styled.div>
            <mock-styled.div>
              App Name
            </mock-styled.div>
            <mock-styled.div>
              Reapit Customer Code
            </mock-styled.div>
            <mock-styled.div>
              Customer Address
            </mock-styled.div>
            <mock-styled.div>
              Date Installed
            </mock-styled.div>
            <mock-styled.div>
              Installed By
            </mock-styled.div>
            <mock-styled.div>
              Date Uninstalled
            </mock-styled.div>
            <mock-styled.div>
              Uninstalled By
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.span
                classname="mock-css."
                style="font-size: 1.2rem;"
              >
                <svg
                  style="font-size: 1.2rem;"
                />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.span
                  classname="mock-css."
                >
                  <svg />
                </mock-styled.span>
                <mock-styled.div
                  data-narrow-label="Customer Name"
                >
                  Sandbox Estates
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.span
                  classname="mock-css."
                >
                  <svg />
                </mock-styled.span>
                <mock-styled.div
                  data-narrow-label="App Name"
                >
                  App Test Name
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Reapit Customer Code"
                >
                  SBOX
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Customer Address"
                >
                  67-74 Third Floor Saffron Hill London EC1N 8QX
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Date Installed"
                >
                  23-03-2022
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Installed By"
                >
                  test@example.com
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Date Uninstalled"
                >
                  -
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  data-narrow-label="Uninstalled By"
                />
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="mock-css."
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="mock-css."
                  >
                    <mock-styled.button
                      classname="mock-css."
                    >
                      <mock-styled.div />
                      Togggle API Consumption
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              value="1"
            />
             of 
            1
          </mock-styled.div>
          <mock-styled.button
            data-testid="back-button"
            type="button"
          >
            <mock-styled.span
              classname=""
            >
              <svg />
            </mock-styled.span>
          </mock-styled.button>
          <mock-styled.button
            data-testid="forward-button"
            type="button"
          >
            <mock-styled.span
              classname=""
            >
              <svg />
            </mock-styled.span>
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.section>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.section
      classname=""
    >
      <mock-styled.h1
        classname=""
      >
        Installations
      </mock-styled.h1>
      <form>
        <mock-styled.div
          classname="mock-css.
  margin-bottom: 2.5rem;
"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css.
  margin-bottom: 0.75rem;
"
              >
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  placeholder="Search"
                />
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Search Apps
                </mock-styled.label>
              </mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  id="app-ids-select"
                  name="appIds"
                />
                <mock-styled.div
                  classname="mock-css.
  margin-bottom: 0.75rem;
"
                >
                  <mock-styled.span
                    classname="mock-css.
  margin-left: 0.375rem;
 mock-css.
  font-size: 2.5rem;
"
                  >
                    <svg />
                  </mock-styled.span>
                  <p>
                    No apps selected
                  </p>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label
              classname="mock-css.
  display: flex;
 mock-css.
  margin-bottom: 0.5rem;
"
              htmlfor="developer-search-box"
            >
              Company
            </mock-styled.label>
            <mock-styled.div>
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div
                data-testid="search-input"
                name="companyName"
                placeholder="Search developer organisations"
                value=""
              />
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.label
              classname="mock-css.
  display: flex;
 mock-css.
  margin-bottom: 0.5rem;
"
              htmlfor="client-search-box"
            >
              Client
            </mock-styled.label>
            <mock-styled.div>
              <input
                id="client-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <mock-styled.div>
                <mock-styled.span
                  classname=""
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
              <mock-styled.div
                data-testid="search-input"
                name="clientId"
                placeholder="Search customers"
                value=""
              />
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="installedDateFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Installed Date From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="installedDateTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Installed Date To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Is Charged Consumption
              </mock-styled.label>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.input
                  id="option-consumption-all"
                  name="isChargedConsumption"
                  type="radio"
                  value=""
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-consumption-all"
                >
                  <mock-styled.span>
                    All
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-consumption-true"
                  name="isChargedConsumption"
                  type="radio"
                  value="true"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-consumption-true"
                >
                  <mock-styled.span>
                    Charged
                  </mock-styled.span>
                </mock-styled.label>
                <mock-styled.input
                  id="option-consumption-false"
                  name="isChargedConsumption"
                  type="radio"
                  value="false"
                />
                <mock-styled.label
                  classname="mock-css."
                  htmlfor="option-consumption-false"
                >
                  <mock-styled.span>
                    Free
                  </mock-styled.span>
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <div
        class="mock-css.
  margin-bottom: 2.5rem;
"
      >
        <mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.button
              classname="mock-css."
              type="button"
            >
              <mock-styled.div />
              Download CSV
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </div>
      <mock-styled.div
        classname="mock-css.
  margin-bottom: 2.5rem;
"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="8"
      >
        <mock-styled.div>
          <mock-styled.div>
            Customer Name
          </mock-styled.div>
          <mock-styled.div>
            App Name
          </mock-styled.div>
          <mock-styled.div>
            Reapit Customer Code
          </mock-styled.div>
          <mock-styled.div>
            Customer Address
          </mock-styled.div>
          <mock-styled.div>
            Date Installed
          </mock-styled.div>
          <mock-styled.div>
            Installed By
          </mock-styled.div>
          <mock-styled.div>
            Date Uninstalled
          </mock-styled.div>
          <mock-styled.div>
            Uninstalled By
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname="mock-css."
              style="font-size: 1.2rem;"
            >
              <svg
                style="font-size: 1.2rem;"
              />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.span
                classname="mock-css."
              >
                <svg />
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Customer Name"
              >
                Sandbox Estates
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.span
                classname="mock-css."
              >
                <svg />
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="App Name"
              >
                App Test Name
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                data-narrow-label="Reapit Customer Code"
              >
                SBOX
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                data-narrow-label="Customer Address"
              >
                67-74 Third Floor Saffron Hill London EC1N 8QX
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                data-narrow-label="Date Installed"
              >
                23-03-2022
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                data-narrow-label="Installed By"
              >
                test@example.com
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                data-narrow-label="Date Uninstalled"
              >
                -
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                data-narrow-label="Uninstalled By"
              />
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="mock-css."
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.button
                    classname="mock-css."
                  >
                    <mock-styled.div />
                    Togggle API Consumption
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            value="1"
          />
           of 
          1
        </mock-styled.div>
        <mock-styled.button
          data-testid="back-button"
          type="button"
        >
          <mock-styled.span
            classname=""
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
        <mock-styled.button
          data-testid="forward-button"
          type="button"
        >
          <mock-styled.span
            classname=""
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
